--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,5 +36,5 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./helloworld-0.1.${{ github.run_number }}-Linux.deb
-          asset_name: helloworld-1.0.${{ github.run_number }}-Linux.deb
+          asset_name: Version:0.0.${{ github.run_number }}- Hello, World!
           asset_content_type: application/vnd.debian.binary-package
