--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,9 +36,9 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./helloworld-0.0.${{ github.run_number }}-Linux.deb
-          asset_name: Version:0.0.${{ github.run_number }}-Linux.deb
+          asset_name: helloworld-0.0.${{ github.run_number }}-Linux.deb
           asset_content_type: application/vnd.debian.binary-package
       - name: Install packages
         run: |
           sudo apt-get update
-          apt update && apt install -y Version:0.0.${{ github.run_number }}-Linux.deb
+          apt update && apt install -y helloworld-0.0.${{ github.run_number }}-Linux.deb
