--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,4 +41,4 @@ jobs:
       - name: Install packages
         run: |
           sudo apt-get update
-          apt update && apt install -y helloworld-0.0.${{ github.run_number }}-Linux.deb
+          sudo apt update && apt install -y helloworld-0.0.${{ github.run_number }}-Linux.deb
